--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="260dp"
         android:layout_height="62dp"
         android:fontFamily="@font/alata"
-        android:text="@string/what2watch"
+        android:text=" What2Watch"
         android:textColor="#000000"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
