--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment_activity_main"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
@@ -44,7 +44,8 @@
         android:textStyle="bold"
         android:typeface="serif"
         tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="25dp" />
+        tools:layout_editor_absoluteY="25dp"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress2"
@@ -54,7 +55,8 @@
         android:hint="email"
         android:inputType="textEmailAddress"
         tools:layout_editor_absoluteX="87dp"
-        tools:layout_editor_absoluteY="140dp" />
+        tools:layout_editor_absoluteY="140dp"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
@@ -64,7 +66,8 @@
         android:hint="Password"
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="87dp"
-        tools:layout_editor_absoluteY="218dp" />
+        tools:layout_editor_absoluteY="218dp"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView2"
@@ -96,12 +99,13 @@
         android:id="@+id/button2"
         android:layout_width="143dp"
         android:layout_height="54dp"
-        android:text="Log In"
+        android:text="@string/log_in"
         app:iconPadding="24dp"
         app:iconTint="#E91E63"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/nav_view"
+        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment_activity_main"
         app:layout_constraintStart_toStartOf="parent"
-        app:strokeColor="#0B0A0A"
-        tools:layout_editor_absoluteY="297dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="#0B0A0A" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
