--- a/app/src/main/res/layout/fragment_q1.xml
+++ b/app/src/main/res/layout/fragment_q1.xml
@@ -20,5 +20,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/text_Home"
+        android:layout_width="260dp"
+        android:layout_height="62dp"
+        android:fontFamily="@font/alata"
+        android:text=" What2Watch"
+        android:textColor="#000000"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.13" />
+
+    <TextView
+        android:id="@+id/text_ShowMovie"
+        android:layout_width="230dp"
+        android:layout_marginTop="25dp"
+        android:layout_height="62dp"
+        android:fontFamily="@font/alata"
+        android:text=" Show or Movie?"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintTop_toBottomOf="@id/text_Home"
+        app:layout_constraintLeft_toLeftOf="@id/text_Home"
+        app:layout_constraintRight_toRightOf="@id/text_Home"
+        app:layout_constraintVertical_bias="0.27" />
+
+    <ImageButton
+        android:id="@+id/btn_movie"
+        android:layout_width="146dp"
+        android:layout_height="338dp"
+        android:background="@null"
+        android:contentDescription="Picture of movies with the title movie on it."
+        android:src="@drawable/baseline_person_24"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="277dp" />
+
+    <ImageButton
+        android:id="@+id/btn_show"
+        android:layout_width="148dp"
+        android:layout_height="337dp"
+        android:background="@null"
+        android:contentDescription="Picture of shows with the title show on it."
+        android:src="@drawable/baseline_person_24"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="222dp"
+        tools:layout_editor_absoluteY="276dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
