--- a/app/src/main/res/layout/fragment_q1.xml
+++ b/app/src/main/res/layout/fragment_q1.xml
@@ -49,10 +49,34 @@
         app:layout_constraintRight_toRightOf="@id/text_Home"
         app:layout_constraintVertical_bias="0.27" />
 
+    <Button
+        android:id="@+id/btn_movie"
+        android:layout_width="148dp"
+        android:layout_height="336dp"
+        android:text="Movie"
+
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="217dp"
+        tools:layout_editor_absoluteY="255dp" />
+
+    <Button
+        android:id="@+id/btn_show"
+        android:layout_width="148dp"
+        android:layout_height="336dp"
+        android:layout_marginEnd="16dp"
+
+        android:text="Show"
+        app:layout_constraintEnd_toStartOf="@+id/btn_movie"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="255dp" />
+
+
+    <!-- I would like to use this code below to eventually have an image with "Show" and "Movie" that the user can click as buttons for their choice. Right now I will just use
+    buttons.
     <ImageButton
         android:id="@+id/btn_movie"
-        android:layout_width="146dp"
-        android:layout_height="338dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@null"
         android:contentDescription="Picture of movies with the title movie on it."
         android:src="@drawable/baseline_person_24"
@@ -70,5 +94,5 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="222dp"
         tools:layout_editor_absoluteY="276dp" />
-
+-->
 </androidx.constraintlayout.widget.ConstraintLayout>
