Got all 4 navigation buttons working and done
The only thing I will have to fix is to get rid of the text showing up eventually

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,4 +23,10 @@
         android:label="@string/title_account"
         tools:layout="@layout/fragment_account" />
 
+    <fragment
+        android:id="@+id/navigation_shuffle"
+        android:name="com.example.what2watch_svitlik_odunsi_f23.ui.shuffle.ShuffleFragment"
+        android:label="Shuffle"
+        tools:layout="@layout/fragment_shuffle" />
+
 </navigation>
