--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,6 +12,11 @@
         android:title="@string/title_browse" />
 
     <item
+        android:id="@+id/navigation_shuffle"
+        android:icon="@drawable/baseline_shuffle_24"
+        android:title="Shuffle" />
+
+    <item
         android:id="@+id/navigation_account"
         android:icon="@drawable/baseline_person_24"
         android:title="@string/title_account" />
