--- a/app/src/main/res/layout/fragment_q4.xml
+++ b/app/src/main/res/layout/fragment_q4.xml
@@ -20,5 +20,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/text_Home"
+        android:layout_width="260dp"
+        android:layout_height="62dp"
+        android:fontFamily="@font/alata"
+        android:text=" What2Watch"
+        android:textColor="#000000"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.13" />
+
+    <TextView
+        android:id="@+id/text_rating"
+        android:layout_width="270dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="25dp"
+        android:fontFamily="@font/alata"
+        android:text=" IMBD Rating Slider"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="@id/text_Home"
+        app:layout_constraintRight_toRightOf="@id/text_Home"
+        app:layout_constraintTop_toBottomOf="@id/text_Home" />
+
+    
 
 </androidx.constraintlayout.widget.ConstraintLayout>
