--- a/app/src/main/res/layout/fragment_q1.xml
+++ b/app/src/main/res/layout/fragment_q1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -28,48 +28,39 @@
         android:text=" What2Watch"
         android:textColor="#000000"
         android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.13" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+       />
 
     <TextView
         android:id="@+id/text_ShowMovie"
         android:layout_width="230dp"
-        android:layout_marginTop="25dp"
         android:layout_height="62dp"
         android:fontFamily="@font/alata"
         android:text=" Show or Movie?"
         android:textColor="#000000"
         android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@id/text_Home"
-        app:layout_constraintLeft_toLeftOf="@id/text_Home"
-        app:layout_constraintRight_toRightOf="@id/text_Home"
-        app:layout_constraintVertical_bias="0.27" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/text_Home"
+        android:layout_marginTop="16dp" />
 
     <Button
         android:id="@+id/btn_movie"
         android:layout_width="148dp"
         android:layout_height="336dp"
         android:text="Movie"
-
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="217dp"
-        tools:layout_editor_absoluteY="255dp" />
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="50"
+        android:layout_centerVertical="true" />
 
     <Button
         android:id="@+id/btn_show"
         android:layout_width="148dp"
         android:layout_height="336dp"
-        android:layout_marginEnd="16dp"
-
+        android:layout_toEndOf="@+id/btn_movie"
+        android:layout_marginStart="16dp"
         android:text="Show"
-        app:layout_constraintEnd_toStartOf="@+id/btn_movie"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="255dp" />
-
+        android:layout_centerVertical="true" />
 
     <!-- I would like to use this code below to eventually have an image with "Show" and "Movie" that the user can click as buttons for their choice. Right now I will just use
     buttons.
@@ -95,4 +86,4 @@
         tools:layout_editor_absoluteX="222dp"
         tools:layout_editor_absoluteY="276dp" />
 -->
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
