Cleaning up files - made some mistakes with my sliderview

--- a/app/src/main/res/layout/fragment_q1.xml
+++ b/app/src/main/res/layout/fragment_q1.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.q1.q1Fragment">
+
 
     <TextView
         android:id="@+id/text_q1"
@@ -50,7 +51,7 @@
         android:layout_height="336dp"
         android:text="Movie"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="50"
+        android:layout_marginLeft="50dp"
         android:layout_centerVertical="true" />
 
     <Button
