--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,74 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-
     <TextView
         android:id="@+id/text_Home"
         android:layout_width="260dp"
         android:layout_height="62dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/alata"
-        android:text=" What2Watch"
+        android:text="What2Watch"
         android:textColor="#000000"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.13" />
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/text_StartQuiz"
         android:layout_width="200dp"
-        android:layout_marginTop="25dp"
         android:layout_height="62dp"
+        android:layout_below="@+id/text_Home"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
         android:fontFamily="@font/alata"
         android:text="@string/start_the_quiz"
         android:textColor="#000000"
-        android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@id/text_Home"
-        app:layout_constraintLeft_toLeftOf="@id/text_Home"
-        app:layout_constraintRight_toRightOf="@id/text_Home"
-        app:layout_constraintVertical_bias="0.27" />
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/btn_begin"
-        android:layout_marginTop="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/begin"
-        app:layout_constraintTop_toBottomOf="@id/text_StartQuiz"
-        app:layout_constraintLeft_toLeftOf="@id/text_StartQuiz"
-        app:layout_constraintRight_toRightOf="@id/text_StartQuiz"/>
-
+        android:layout_below="@+id/text_StartQuiz"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp" />
 
     <TextView
         android:id="@+id/text_or"
         android:layout_width="60dp"
         android:layout_height="62dp"
+        android:layout_below="@+id/btn_begin"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/alata"
         android:text="Or..."
         android:textColor="#000000"
-        android:textSize="30sp"
-        app:layout_constraintLeft_toLeftOf="@id/btn_begin"
-        app:layout_constraintRight_toRightOf="@id/btn_begin"
-        app:layout_constraintTop_toBottomOf="@id/btn_begin" />
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/btn_pickForMe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Just Pick for Me!"
-        android:layout_marginTop="40dp"
+        android:layout_below="@+id/text_or"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp" />
 
-        app:layout_constraintLeft_toLeftOf="@id/text_or"
-        app:layout_constraintRight_toRightOf="@id/text_or"
-        app:layout_constraintTop_toBottomOf="@id/text_or" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
