--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/navigation_home"
         android:name="com.example.what2watch_svitlik_odunsi_f23.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_q12"
+            app:destination="@id/navigation_q1" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_browse"
@@ -28,5 +32,56 @@
         android:name="com.example.what2watch_svitlik_odunsi_f23.ui.shuffle.ShuffleFragment"
         android:label="Shuffle"
         tools:layout="@layout/fragment_shuffle" />
+
+    <fragment
+        android:id="@+id/navigation_q1"
+        android:name="com.example.what2watch_svitlik_odunsi_f23.ui.q1showmovie.q1Fragment"
+        android:label="q1"
+        tools:layout="@layout/fragment_q1" >
+        <action
+            android:id="@+id/action_navigation_q1_to_navigation_q2"
+            app:destination="@id/navigation_q2" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_q2"
+        android:name="com.example.what2watch_svitlik_odunsi_f23.ui.q2genre.q2Fragment"
+        android:label="q2"
+        tools:layout="@layout/fragment_q2" >
+        <action
+            android:id="@+id/action_navigation_q2_to_navigation_q3"
+            app:destination="@id/navigation_q3" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_q3"
+        android:name="com.example.what2watch_svitlik_odunsi_f23.ui.q3decade.q3Fragment"
+        android:label="q3"
+        tools:layout="@layout/fragment_q3" >
+        <action
+            android:id="@+id/action_navigation_q3_to_navigation_q4"
+            app:destination="@id/navigation_q4" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_q4"
+        android:name="com.example.what2watch_svitlik_odunsi_f23.ui.q4rating.q4Fragment"
+        android:label="q4"
+        tools:layout="@layout/fragment_q4" />
+
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/mobile_navigation" >
+        <action
+            android:id="@+id/action_nav_host_fragment_to_navigation_home"
+            app:destination="@id/navigation_home" />
+    </fragment>
+
+
+
 
 </navigation>
