working on app navigation and buttons - not working perfectly
Need to fix some layout issues and q1 not navigating to q2

--- a/app/src/main/res/layout/fragment_q2.xml
+++ b/app/src/main/res/layout/fragment_q2.xml
@@ -205,4 +205,14 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_fantasy"
         app:layout_constraintTop_toBottomOf="@+id/btn_romcom" />
 
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="276dp"
+        android:text="Next"
+        app:layout_constraintTop_toBottomOf="@+id/btn_adventure"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="171dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
