Fixed the decade layout

--- a/app/src/main/res/layout/fragment_q3.xml
+++ b/app/src/main/res/layout/fragment_q3.xml
@@ -55,69 +55,68 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="80's"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_90s"
-        app:layout_constraintTop_toBottomOf="@+id/text_Decade"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="47dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.142"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_90s" />
+
 
     <Button
         android:id="@+id/btn_90s"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="172dp"
         android:text="90's"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_00s"
-        app:layout_constraintEnd_toStartOf="@+id/btn_00s"
-        app:layout_constraintHorizontal_bias="0.615"
-        app:layout_constraintStart_toEndOf="@+id/btn_80s"
-        app:layout_constraintTop_toBottomOf="@+id/text_Decade"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/text_Home" />
 
     <Button
         android:id="@+id/btn_00s"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="00's"
-        app:layout_constraintTop_toBottomOf="@+id/text_Decade"
-        tools:layout_editor_absoluteX="261dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.826"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_90s" />
 
     <Button
         android:id="@+id/btn_10s"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="32dp"
         android:text="10's"
         app:layout_constraintEnd_toStartOf="@+id/btn_20s"
+        app:layout_constraintHorizontal_bias="0.829"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_90s" />
 
     <Button
         android:id="@+id/btn_20s"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginEnd="100dp"
         android:text="20's"
-        app:layout_constraintTop_toBottomOf="@+id/btn_90s"
-        tools:layout_editor_absoluteX="226dp" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_90s" />
 
     <Button
         android:id="@+id/btn_recent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
         android:text="Recent"
-        app:layout_constraintEnd_toEndOf="@+id/btn_20s"
-        app:layout_constraintHorizontal_bias="0.456"
-        app:layout_constraintStart_toStartOf="@+id/btn_10s"
-        app:layout_constraintTop_toBottomOf="@+id/btn_90s" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_10s" />
 
     <Button
         android:id="@+id/btn_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="434dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_recent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
