--- a/app/src/main/res/layout/fragment_q4.xml
+++ b/app/src/main/res/layout/fragment_q4.xml
@@ -59,7 +59,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.528" />
+        app:layout_constraintVertical_bias="0.977" />
 
     <com.google.android.material.slider.RangeSlider
 
@@ -80,7 +80,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="417dp" />
+        app:layout_constraintEnd_toEndOf="@+id/range_slider2"
+        app:layout_constraintStart_toStartOf="@+id/range_slider2"
+        app:layout_constraintTop_toBottomOf="@+id/btn_skip" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
