--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -36,7 +36,7 @@
     <fragment
         android:id="@+id/navigation_q1"
         android:name="com.example.what2watch_svitlik_odunsi_f23.ui.q1showmovie.q1Fragment"
-        android:label="q1"
+        android:label="Show or Movie"
         tools:layout="@layout/fragment_q1" >
         <action
             android:id="@+id/action_navigation_q1_to_navigation_q2"
@@ -46,7 +46,7 @@
     <fragment
         android:id="@+id/navigation_q2"
         android:name="com.example.what2watch_svitlik_odunsi_f23.ui.q2genre.q2Fragment"
-        android:label="q2"
+        android:label="Genre"
         tools:layout="@layout/fragment_q2" >
         <action
             android:id="@+id/action_navigation_q2_to_navigation_q3"
@@ -56,7 +56,7 @@
     <fragment
         android:id="@+id/navigation_q3"
         android:name="com.example.what2watch_svitlik_odunsi_f23.ui.q3decade.q3Fragment"
-        android:label="q3"
+        android:label="Decade"
         tools:layout="@layout/fragment_q3" >
         <action
             android:id="@+id/action_navigation_q3_to_navigation_q4"
@@ -66,7 +66,7 @@
     <fragment
         android:id="@+id/navigation_q4"
         android:name="com.example.what2watch_svitlik_odunsi_f23.ui.q4rating.q4Fragment"
-        android:label="q4"
+        android:label="Rating"
         tools:layout="@layout/fragment_q4" >
         <action
             android:id="@+id/action_navigation_q4_to_navigation_quizresults"
@@ -76,7 +76,7 @@
     <fragment
         android:id="@+id/navigation_quizresults"
         android:name="com.example.what2watch_svitlik_odunsi_f23.ui.quizresults.ResultsFragment"
-        android:label="results"
+        android:label="Results"
         tools:layout="@layout/fragment_results" />
 
 
