--- a/app/src/main/res/layout/fragment_q3.xml
+++ b/app/src/main/res/layout/fragment_q3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.q3.q3Fragment">
+    tools:context=".ui.q3decade.Q3Fragment">
 
     <TextView
         android:id="@+id/text_Q3"
