--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.13" />
 
-
+    <!-- Add a recyler view to show the movies / shows on this page? Have title, add to favorites, or check out reviews on the view? -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
