--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -22,18 +22,18 @@
         app:layout_constraintVertical_bias="0.13" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_drinks"
+        android:id="@+id/recycler_view_titles"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="40dp"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:listitem="ShowMovieCard" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:listitem="@layout/results_card" />
 
     <!-- Add a recyler view to show the movies / shows on this page? Have title, add to favorites, or check out reviews on the view? -->
 
