--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -88,11 +88,11 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/btn_Login"
+        android:id="@+id/btnLogin"
         android:layout_width="211dp"
         android:layout_height="63dp"
         android:layout_marginStart="96dp"
-        android:text="@string/log_in"
+        android:text="LOG IN"
         app:iconPadding="24dp"
         app:iconTint="#E91E63"
         app:layout_constraintBottom_toBottomOf="@+id/nav_view"
